--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>mod2_assignment</title>
 	<link rel='stylesheet' href="css.css">
 </head>
-<body>
+<body id="wall">
 	<center><h1>OUR MENU</h1>
 	<div class='row'>
 		<div id='element'>
