--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -16,7 +16,7 @@
 			<div class="head-2"><center>Beef</center></div><p>Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of protein and nutrients. Most beef can be used as is by merely cutting into certain parts, such as roasts.</p>
 		</div>
 		<div id='element3'>
-			<div class="head-3"><center>Sushi</center></div><p>Sushi is a traditional Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanying a variety of ingredients, such as seafood, often raw, and vegetables. Styles of sushi and its presentation vary widely, but the one key ingredient is "sushi rice".</p>
+			<div class="head-3"><center>Sushi</center></div><p>Sushi is a traditional Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanying a variety of ingredients, such as seafood,but the one key ingredient is "sushi rice".In india kill cow is not practiced.</p>
 		</div>
 	</div></center>
 </body>
