--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -13,7 +13,7 @@
 			<div class="head-1"><center>Chicken</center></div><p>Southern fried chicken, also known simply as fried chicken, is a dish consisting of chicken pieces that have been coated with seasoned flour or batter and pan-fried, deep fried, pressure fried. The breading adds a crisp coating or crust .</p>
 	</div>
 		<div id='element'>
-			<div class="head-2"><center>Beef</center></div><p>Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of protein and nutrients. Most beef can be used as is by merely cutting into certain parts, such as roasts.</p>
+			<div class="head-2"><center>Beef</center></div><p>Beef is the culinary name for meat from cattle. Humans have been eating beef since prehistoric times. Beef is a source of protein and nutrients. Most beef can be used as is by merely cutting into certain parts, such as roasts.</p>
 		</div>
 		<div id='element3'>
 			<div class="head-3"><center>Sushi</center></div><p>Sushi is a traditional Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanying a variety of ingredients, such as seafood,but the one key ingredient is "sushi rice".In india kill cow is not practiced.</p>
